--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,6 +69,7 @@ img{
     background-color: rgb(250, 250, 250);
     margin: .51rem;
     padding: 1.4rem;
+    border-radius:10px ;
 }
 
 .notch{
@@ -78,6 +79,7 @@ img{
     position: absolute;
     top: 0%;
     right: 0%;
+    border-radius: 50%;
 }
 
 
